# pinny

./: README.md  deps.sh  meson.build
data/: application.css  meson.build  pinny.desktop  pinny.gresource.xml  pinny.gschema.xml
src/: Application.vala  PinnyWindow.vala
src/Backend/: Note.vala  Settings.vala
src/Widgets/: MenuPopover.vala
